# AmaiGirl

./: .gitignore  AGENT.en.md  AGENT.md  CMakeLists.txt  CONTRIBUTING.en.md  CONTRIBUTING.md  README.en.md  README.md  THIRD_PARTY_LICENSES.en.md  THIRD_PARTY_LICENSES.md
.github/workflows/: codeql.yml  super-linter.yml
cmake/: Info.plist.in
res/i18n/: amaigirl_en_US.qm  amaigirl_en_US.ts
res/licenses/: THIRD_PARTY_LICENSES.en.md  THIRD_PARTY_LICENSES.md
scripts/: check_platform_branch_diff.py  compile_qm.py  qt_linguist.py  update_i18n.py
src/ai/: AgentRuntime.cpp  AgentRuntime.hpp  ChatController.cpp  ChatController.hpp  ConversationRepository.cpp  ConversationRepository.hpp  ConversationRepositoryAdapter.cpp  ConversationRepositoryAdapter.hpp  McpHttpSseAdapter.cpp  McpHttpSseAdapter.hpp  McpStdioAdapter.cpp  McpStdioAdapter.hpp  OpenAIChatClient.cpp  OpenAIChatClient.hpp  OpenAITtsClient.cpp  OpenAITtsClient.hpp
src/ai/core/: IAgentRuntime.hpp  IChatProvider.hpp  IConversationStore.hpp  IMcpAdapter.cpp  IMcpAdapter.hpp  IMcpHttpSseAdapter.hpp  ISkillRegistry.hpp  IToolRegistry.hpp  ITtsProvider.hpp  McpServerConfig.cpp  McpServerConfig.hpp  McpServerStatus.hpp  ToolRegistry.cpp  ToolRegistry.hpp
src/app/: Version.hpp  main.cpp
src/common/: SettingsManager.cpp  SettingsManager.hpp  Utils.hpp
src/engine/: Renderer.cpp  Renderer.hpp
src/ui/: AboutWindow.cpp  ChatWindow.cpp  ChatWindow.hpp  McpServerCard.cpp  McpServerCard.hpp  McpServerEditorDialog.cpp  McpServerEditorDialog.hpp  SettingsWindow.cpp  SettingsWindow.hpp
src/ui/era-style/: EraButton.cpp  EraButton.hpp  EraChatWidgets.cpp  EraChatWidgets.hpp  EraComboBox.cpp  EraComboBox.hpp  EraLineEdit.cpp  EraLineEdit.hpp  EraLinuxWindowTheme.cpp  EraMacWindowTheme.hpp  EraMacWindowTheme.mm  EraPlainTextEdit.cpp  EraPlainTextEdit.hpp  EraStyleColor.hpp  EraStyleHelper.cpp  EraStyleHelper.hpp  EraSwitch.cpp  EraTabBar.cpp  EraTabBar.hpp  EraTextEdit.cpp  EraTextEdit.hpp  EraWinWindowTheme.cpp
src/ui/theme/: ThemeApi.cpp  ThemeApi.hpp  ThemeWidgets.hpp
src/ui/widgets/: TypingDotsWidget.cpp  TypingDotsWidget.hpp
